--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
 server.port=4411
-## mvc config
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
 
 #mail
 spring.mail.host=
+
+#datasource
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=root
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# JPA properties
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+
